--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,10 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'G-C4NFL3C9TF');
+      
+      // Debug: Log Google Analytics initialization
+      console.log('🔍 Google Analytics initialized with ID: G-C4NFL3C9TF');
+      console.log('🔍 Environment GA ID:', import.meta?.env?.VITE_GA_MEASUREMENT_ID || 'Not available in HTML');
     </script>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
